[project]
name = "sql-cleaning-env"
version = "0.1.0"
description = "OpenEnv environment where AI agents clean dirty SQL databases using reinforcement learning"
authors = [
  { name = "PriyanshuCoder" }
]
requires-python = ">=3.11"

dependencies = [
  "fastapi==0.111.0",
  "uvicorn==0.30.1",
  "pydantic>=2.0",
  "openai>=1.0.0",
  "httpx>=0.27.0",
  "pyyaml>=6.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
